# qrcode-demo

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults  sdkconfig.defaults.esp32  sdkconfig.defaults.esp32s3
components/classifier/: CMakeLists.txt  qrcode_classifier.c  qrcode_classifier.h
components/pbm/: CMakeLists.txt  pbm.c  pbm.h
lib/: quirc_opencv.cpp  quirc_opencv.h  quirc_opencv_c.h
main/: CMakeLists.txt  camera.c  camera.h  idf_component.yml  lcd.c  lcd.h  qrcode_app_main.cpp  qrcode_app_new.c  qrcode_classifier.h  qrcode_demo_main.c
main/camera/: who_camera.c  who_camera.h
